src/gcal-edit-dialog.c
@@ -974,13 +974,10 @@ gcal_edit_dialog_set_time_format (GcalEditDialog *dialog,
 {
   g_return_if_fail (GCAL_IS_EDIT_DIALOG (dialog));
 
-  if (dialog->format_24h != use_24h_format)
-  {
-    dialog->format_24h = use_24h_format;
+  dialog->format_24h = use_24h_format;
 
-    gcal_time_selector_set_time_format (GCAL_TIME_SELECTOR (dialog->start_time_selector), dialog->format_24h);
-    gcal_time_selector_set_time_format (GCAL_TIME_SELECTOR (dialog->end_time_selector), dialog->format_24h);
-  }
+  gcal_time_selector_set_time_format (GCAL_TIME_SELECTOR (dialog->start_time_selector), dialog->format_24h);
+  gcal_time_selector_set_time_format (GCAL_TIME_SELECTOR (dialog->end_time_selector), dialog->format_24h);
 }
 
 void
